--- a/form/style.css
+++ b/form/style.css
@@ -8,15 +8,40 @@ body
 div
 {
     align-items: center;
-    margin-top: 300px;
+    margin-top: 220px;
 }
 
-button
+button, #btnCidade
 {
     color: rgb(48, 32, 13);
     background-color: rgb(240, 199, 149);
     padding: 10px;
     border: 5px;
     margin-top: 10px;
+    width: 200px;
 }
 
+input
+{
+    padding: 8px;
+    width: 250px;
+    margin-top: 20px;
+}
+
+select
+{
+    padding: 8px;
+    width: 275px;
+    margin-top: 20px;
+}
+
+#btnCadastro
+{
+    padding: 8px;
+    margin-top: 50px;
+}
+
+h1
+{
+    color: rgb(48, 32, 13); 
+}
